# graph-rag-trial

./: README.md  graph-rag.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
sample/: config.py  main.py  pyproject.toml
